--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,22 @@
 [[redirects]]
   from = "/*"
-  to = "/"
+  to = "/index.html"
   status = 200
+
+# Redirect www to non-www
+[[redirects]]
+  from = "https://www.replaymuseum.com/*"
+  to = "https://replaymuseum.com/:splat"
+  status = 301
+  force = true
+
+# Redirect http to https
+[[redirects]]
+  from = "http://*"
+  to = "https://:splat"
+  status = 301
+  force = true
+
+[build]
+  command = "npm run build"
+  publish = "dist"
