--- a/netlify.toml
+++ b/netlify.toml
@@ -1,22 +1,38 @@
+[build]
+  command = "npm run build"
+  publish = "dist"
+  environment = { NODE_VERSION = "20" }
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
 
-# Redirect www to non-www
 [[redirects]]
   from = "https://www.replaymuseum.com/*"
   to = "https://replaymuseum.com/:splat"
   status = 301
   force = true
 
-# Redirect http to https
 [[redirects]]
   from = "http://*"
   to = "https://:splat"
   status = 301
   force = true
 
-[build]
-  command = "npm run build"
-  publish = "dist"
+[build.processing]
+  skip_processing = false
+
+[build.processing.css]
+  bundle = true
+  minify = true
+
+[build.processing.js]
+  bundle = true
+  minify = true
+
+[build.processing.html]
+  pretty_urls = true
+
+[build.processing.images]
+  compress = true
