--- a/netlify.toml
+++ b/netlify.toml
@@ -12,11 +12,12 @@
 [[headers]]
   for = "/*"
     [headers.values]
-    Cache-Control = "no-cache"
+    Cache-Control = "public, max-age=0, must-revalidate"
     X-Frame-Options = "DENY"
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
+    Content-Security-Policy = "default-src 'self' https://*.supabase.co; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https://* http://*; font-src 'self' data:; connect-src 'self' https://*.supabase.co wss://*.supabase.co;"
 
 [[headers]]
   for = "/assets/*"
